clang/test/BSC/Negative/InitAnalysis/init-uninit-check-safeonly.cbs
// RUN: %clang_cc1 -fsyntax-only -uninit-check=safeonly -verify %s

// Test: -uninit-check=safeonly (default) only checks in _Safe zones.

// _Safe function: errors reported.
_Safe void test_safe_error(void) {
    int x;
    int y = x + 1; // expected-error {{use of uninitialized value: `x`}}
}

// Non-safe function: no errors even though code is uninitialized.
void test_no_safe_no_error(void) {
    int x;
    int y = x + 1; // no error — not in a _Safe zone
}
